--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+import ''
+
 body {
   margin: 0;
   padding: 0;
@@ -11,4 +13,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.page {
+  height: 800px;
 }
